--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "mysql2": "^2.1.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
