--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^3.0.0",
     "mysql2": "^2.1.0",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^5.5.1"
